affinity questions
